--- a/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
+++ b/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
@@ -35,7 +35,7 @@
         android:orientation="horizontal"
         android:layout_margin="6dp"
         android:visibility="gone"
-        android:background="@drawable/pip_back"
+        android:background="@drawable/pipsearch"
         android:padding="2dp">
         <EditText
             android:id="@+id/searchMed"
@@ -50,9 +50,8 @@
             android:id="@+id/search"
             android:layout_width="50dp"
             android:layout_gravity="center"
-            android:background="@drawable/pip_back"
             android:layout_height="match_parent"
-            android:padding="2dp"
+            android:padding="4dp"
             android:src="@drawable/ic_search" />
     </LinearLayout>
 
@@ -73,8 +72,8 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"/>
     <LinearLayout
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
