--- a/app/src/main/res/layout/itempharmacie.xml
+++ b/app/src/main/res/layout/itempharmacie.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
+    android:layout_margin="1dp"
     >
     <androidx.cardview.widget.CardView
         android:layout_marginTop="4dp"
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@mipmap/ic_launcher_round"
-                android:padding="5dp"/>
+                android:padding="2dp"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -30,18 +30,18 @@
                     android:id="@+id/nomPharmacie"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:text="Nom de pharmacie"/>
                 <TextView
                     android:id="@+id/emailPharmacie"
-                    android:padding="3dp"
+                    android:padding="2dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:text="Nom de pharmacie"/>
                 <TextView
                     android:id="@+id/villePharmacie"
-                    android:padding="3dp"
+                    android:padding="2dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -51,6 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:layout_gravity="center"
                 >
                 <ImageView
                     android:id="@+id/activeImage"
