--- a/app/src/main/res/menu/menu_pharmacie.xml
+++ b/app/src/main/res/menu/menu_pharmacie.xml
@@ -2,14 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-    <group>
-        <item android:title="@string/language"
-            android:id="@+id/langage"/>
-        <item android:title="@string/help"
-            android:id="@+id/aide"/>
-        <item android:title="@string/qui_somme_nous"
-            android:id="@+id/about_us"/>
-        <item android:title="@string/log_out"
-            android:id="@+id/log_out"/>
-    </group>
+<item android:id="@+id/action_search"
+    android:title="Search"
+    android:icon="@drawable/ic_search"
+    app:showAsAction="always"
+    app:actionViewClass="androidx.appcompat.widget.SearchView"
+    />
 </menu>
