--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#038E08" />
-    <corners android:radius="70dp"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item  android:state_pressed="true">
+        <shape
+            android:shape="rectangle">
+            <solid android:color="#038E08" />
+            <corners android:radius="70dp"/>
+            <stroke android:width="6dp"
+                android:color="#E40527"/>
+        </shape>
+    </item>
+    <item>
+        <shape
+            android:shape="rectangle">
+            <solid android:color="#038E08" />
+            <corners android:radius="70dp"/>
+        </shape>
+    </item>
+</selector>
