--- a/app/src/main/res/layout/activity_help_me.xml
+++ b/app/src/main/res/layout/activity_help_me.xml
@@ -19,8 +19,8 @@
             android:id="@+id/help_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#EC1414"
-            android:text="Aide"
+            android:textColor="#D8C5C5"
+            android:text="@string/help"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             />
 
@@ -41,7 +41,7 @@
             <TextView
                 android:id="@+id/help_body"
                 android:layout_width="wrap_content"
-                android:textColor="#EC1414"
+                android:textColor="#DAC9C9"
                 android:layout_height="wrap_content"
                 android:text="@string/service_d_assistance"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
