--- a/app/src/main/res/layout/nav_head_pharmacie.xml
+++ b/app/src/main/res/layout/nav_head_pharmacie.xml
@@ -14,11 +14,12 @@
 
     <ImageView
         android:id="@+id/imageViewP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:padding="@dimen/nav_header_vertical_spacing"
+        android:src="@drawable/ic_personh"
+        android:background="@drawable/profilebackground"/>
 
     <TextView
         android:id="@+id/namepharmacie"
