--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,7 @@
             android:title="@string/share" />
         <item android:title="@string/log_out"
             android:id="@+id/log_out_actionC"
+            android:icon="@drawable/ic_logout"
             />
     </group>
 </menu>
