--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -25,7 +25,7 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:text="MASTER STRI 2020/2019"
-                android:textColor="@color/fermee"
+                android:textColor="@color/end_color"
                 />
 
             <View
